--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -514,7 +514,7 @@
   },
   "persian_gulf": {
     "title": "الخليج الفارسي",
-    "message": "هذه هي الخليج الفارسي - كانت وستبقى",
+    "message": "هذه هي الخليج الفارسي، كانت وستبقى",
     "card_title": "الخليج الفارسي للأبد"
   },
   "ircf": {
