--- a/assets/languages/fa.json
+++ b/assets/languages/fa.json
@@ -507,7 +507,7 @@
     },
     "persian_gulf": {
         "title": "خلیج فارس",
-        "message": "اینجا خلیج فارس بوده - هست و خواهد ماند",
+        "message": "اینجا خلیج فارس بوده، هست و خواهد ماند",
         "card_title": "خلیج فارس برای همیشه"
     },
     "ircf": {
