--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -155,7 +155,7 @@
     "version": "الإصدار {version}",
     "tagline": "VPN مفتوح المصدر ومجاني وسريع وآمن",
     "developed_by": "تم تطويره بواسطة",
-    "developers": "Hossein Pira & hidedev16",
+    "developers": "Hossein Pira",
     "description": "ProxyCloud هو تطبيق VPN مفتوح المصدر يوفر وصولاً آمناً وخاصاً إلى الإنترنت من خلال تقنية VPN V2Ray وبروكسيات MTProto تيليجرام. سريع ولا محدود ومجاني تمامًا بدون رسوم اشتراك. خصوصيتك هي أولويتنا.",
     "telegram_channel": "قناة تيليجرام",
     "github_source": "الكود المصدري على GitHub",
