--- a/assets/languages/fa.json
+++ b/assets/languages/fa.json
@@ -155,7 +155,7 @@
         "version": "نسخه {version}",
         "tagline": "VPN متن‌باز، رایگان، سریع و خصوصی",
         "developed_by": "توسعه یافته توسط",
-        "developers": "Hossein Pira & hidedev16",
+        "developers": "Hossein Pira",
         "description": "ProxyCloud یک اپلیکیشن VPN متن‌باز است که دسترسی امن و خصوصی به اینترنت را فراهم می‌کند. سریع، نامحدود و کاملاً رایگان بدون هزینه اشتراک. حریم خصوصی شما اولویت ماست.",
         "telegram_channel": "کانال تلگرام",
         "github_source": "کد منبع GitHub",
@@ -419,7 +419,7 @@
         "no_subscriptions": "هیچ اشتراکی یافت نشد",
         "unknown": "ناشناخته",
         "copy_url": "کپی URL",
-        "url_copied": "URL در کلیپ‌بورد کپی شد",
+        "url_copied": "لینک در کلیپ‌بورد کپی شد",
         "add_to_app": "افزودن به برنامه",
         "adding_subscription": "در حال افزودن اشتراک...",
         "subscription_added": "اشتراک با موفقیت اضافه شد",
