--- a/assets/languages/ru.json
+++ b/assets/languages/ru.json
@@ -155,7 +155,7 @@
     "version": "Версия {version}",
     "tagline": "VPN с открытым исходным кодом, бесплатный, быстрый и приватный",
     "developed_by": "Разработано",
-    "developers": "Hossein Pira & hidedev16",
+    "developers": "Hossein Pira",
     "description": "ProxyCloud - это VPN-приложение с открытым исходным кодом, которое обеспечивает безопасный и приватный доступ в интернет через технологию VPN V2Ray и прокси MTProto Telegram. Быстрое, неограниченное и полностью бесплатное без платы за подписку. Ваша конфиденциальность - наш приоритет.",
     "telegram_channel": "Канал в Telegram",
     "github_source": "Исходный код на GitHub",
