--- a/assets/languages/tr.json
+++ b/assets/languages/tr.json
@@ -155,7 +155,7 @@
         "version": "Sürüm {version}",
         "tagline": "Açık Kaynak, Ücretsiz, Hızlı ve Özel VPN",
         "developed_by": "Tarafından geliştirildi",
-        "developers": "Hossein Pira & hidedev16",
+        "developers": "Hossein Pira",
         "description": "ProxyCloud, V2Ray VPN teknolojisi ve Telegram MTProto proxy'leri aracılığıyla güvenli, özel internet erişimi sağlayan açık kaynaklı bir VPN uygulamasıdır. Hızlı, sınırsız ve tamamen ücretsizdir, abonelik ücreti, gizli maliyetler yoktur ve tam şeffaflık sağlar. Gizliliğiniz bizim önceliğimizdir.",
         "telegram_channel": "Telegram Kanalı",
         "github_source": "GitHub Kaynağı",
