--- a/assets/languages/fa.json
+++ b/assets/languages/fa.json
@@ -464,6 +464,7 @@
         "steps": "مراحل:",
         "unique_name_step": "1. برای اشتراک خود نامی منحصر به فرد انتخاب کنید",
         "url_with_configs": "2. لینکی وارد کنید که شامل پیکربندی‌های V2Ray باشد",
+        "import_from_file": "انتخاب فایل",
         "got_it": "متوجه شدم",
         "no_subscriptions": "هنوز اشتراکی اضافه نشده است",
         "last_updated": "آخرین به‌روزرسانی: ",
@@ -489,7 +490,7 @@
         "title": "تنظیمات VPN",
         "save": "ذخیره تنظیمات",
         "bypass_subnets": "زیرشبکه‌های دور زدن",
-        "bypass_subnets_desc": "آدرس‌های زیرشبکه را وارد کنید (یکی در هر خط) که باید از VPN عبور کنند",
+        "bypass_subnets_desc": "آدرس‌های زیرشبکه را وارد کنید (یکی در هر خط) که نباید از VPN عبور کنند",
         "bypass_subnets_hint": "آدرس‌های زیرشبکه را وارد کنید...",
         "reset_default": "بازنشانی به پیش‌فرض",
         "clear_all": "پاک کردن همه",
