--- a/assets/languages/ru.json
+++ b/assets/languages/ru.json
@@ -464,6 +464,7 @@
     "steps": "Шаги:",
     "unique_name_step": "1. Дайте вашей подписке уникальное название",
     "url_with_configs": "2. Введите URL, содержащий конфигурации V2Ray",
+    "import_from_file": "Выбрать файл",
     "got_it": "Понятно",
     "no_subscriptions": "Пока не добавлено ни одной подписки",
     "last_updated": "Последнее обновление: ",
