--- a/assets/languages/zh.json
+++ b/assets/languages/zh.json
@@ -464,6 +464,7 @@
     "steps": "步骤：",
     "unique_name_step": "1. 为您的订阅指定一个唯一名称",
     "url_with_configs": "2. 输入包含V2Ray配置的URL",
+    "import_from_file": "选择文件",
     "got_it": "知道了",
     "no_subscriptions": "尚未添加订阅",
     "last_updated": "最后更新：",
