--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -33,6 +33,8 @@
     "per_app_tunnel_desc": "تحديد التطبيقات التي يجب أن تستخدم نفق VPN (سيتم حظر الآخرين)",
     "home_wallpaper": "خلفية الشاشة الرئيسية",
     "home_wallpaper_desc": "تعيين خلفية مخصصة لشاشة البداية",
+    "wallpaper_store": "متجر الخلفيات",
+    "wallpaper_store_desc": "تصفح وقم بتنزيل الخلفيات من مجموعتنا",
     "vpn_settings": "إعدادات VPN",
     "vpn_settings_desc": "تكوين الشبكات الفرعية للتجاوز وخيارات VPN الأخرى",
     "battery_background": "البطارية والوصول إلى الخلفية",
@@ -278,6 +280,7 @@
     "close": "إغلاق",
     "refresh": "تحديث",
     "loading": "جارٍ التحميل...",
+    "loading_apps": "جارٍ تحميل التطبيقات...",
     "error": "خطأ",
     "success": "نجاح",
     "warning": "تحذير",
@@ -409,7 +412,21 @@
     "image_not_found": "ملف الخلفية غير موجود",
     "failed_load": "فشل في تحميل الصورة",
     "default_background": "خلفية التدرج الافتراضية",
-    "info": "• سيتم تحسين الصور وحفظها محليًا\n• يدعم تنسيقات JPG وPNG\n• تنطبق الخلفية على الشاشة الرئيسية فقط"
+    "info": "• سيتم تحسين الصور وحفظها محليًا\n• يدعم تنسيقات JPG وPNG\n• تنطبق الخلفية على الشاشة الرئيسية فقط",
+    "visit_store": "زيارة متجر الخلفيات",
+    "store_button": "متجر الخلفيات"
+  },
+  "wallpaper_store": {
+    "title": "متجر الخلفيات",
+    "loading": "جارٍ تحميل الخلفيات...",
+    "error_loading": "خطأ في تحميل الخلفيات: {error}",
+    "retry": "إعادة المحاولة",
+    "no_wallpapers": "لا توجد خلفيات متاحة",
+    "set_as_wallpaper": "تعيين كخلفية",
+    "download": "تحميل",
+    "download_success": "تم تحميل الخلفية بنجاح!",
+    "download_error": "خطأ في تحميل الخلفية: {error}",
+    "set_success": "تم تعيين الخلفية بنجاح! انتقل إلى الشاشة الرئيسية لرؤيتها."
   },
   "store_screen": {
     "title": "متجر الاشتراكات",
