--- a/assets/languages/ru.json
+++ b/assets/languages/ru.json
@@ -33,6 +33,8 @@
     "per_app_tunnel_desc": "Выберите приложения, которые должны использовать VPN-туннель (остальные будут заблокированы)",
     "home_wallpaper": "Домашние обои",
     "home_wallpaper_desc": "Установите пользовательские обои для фона главного экрана",
+    "wallpaper_store": "Магазин обоев",
+    "wallpaper_store_desc": "Просматривайте и загружайте обои из нашей коллекции",
     "vpn_settings": "Настройки VPN",
     "vpn_settings_desc": "Настройте подсети обхода и другие параметры VPN",
     "battery_background": "Батарея и фоновый доступ",
@@ -278,6 +280,7 @@
     "close": "Закрыть",
     "refresh": "Обновить",
     "loading": "Загрузка...",
+    "loading_apps": "Загрузка приложений...",
     "error": "Ошибка",
     "success": "Успех",
     "warning": "Предупреждение",
@@ -409,7 +412,21 @@
     "image_not_found": "Файл обоев не найден",
     "failed_load": "Ошибка загрузки изображения",
     "default_background": "Градиентный фон по умолчанию",
-    "info": "• Изображения будут оптимизированы и сохранены локально\n• Поддерживает форматы JPG, PNG\n• Обои применяются только к домашнему экрану"
+    "info": "• Изображения будут оптимизированы и сохранены локально\n• Поддерживает форматы JPG, PNG\n• Обои применяются только к домашнему экрану",
+    "visit_store": "Посетить магазин обоев",
+    "store_button": "Магазин обоев"
+  },
+  "wallpaper_store": {
+    "title": "Магазин обоев",
+    "loading": "Загрузка обоев...",
+    "error_loading": "Ошибка загрузки обоев: {error}",
+    "retry": "Повторить",
+    "no_wallpapers": "Нет доступных обоев",
+    "set_as_wallpaper": "Установить как обои",
+    "download": "Скачать",
+    "download_success": "Обои успешно загружены!",
+    "download_error": "Ошибка загрузки обоев: {error}",
+    "set_success": "Обои успешно установлены! Перейдите на домашний экран, чтобы увидеть их."
   },
   "store_screen": {
     "title": "Магазин подписок",
