--- a/assets/languages/fa.json
+++ b/assets/languages/fa.json
@@ -33,6 +33,8 @@
         "per_app_tunnel_desc": "انتخاب برنامه‌هایی که باید از تونل VPN استفاده کنند (بقیه مسدود خواهند شد)",
         "home_wallpaper": "والپیپر صفحه اصلی",
         "home_wallpaper_desc": "تنظیم والپیپر سفارشی برای پس‌زمینه صفحه اصلی",
+        "wallpaper_store": "فروشگاه والپیپر",
+        "wallpaper_store_desc": "مرور و دانلود والپیپرها از مجموعه ما",
         "vpn_settings": "تنظیمات VPN",
         "vpn_settings_desc": "پیکربندی زیرشبکه‌های دور زدن و سایر گزینه‌های VPN",
         "battery_background": "باتری و دسترسی پس‌زمینه",
@@ -278,6 +280,7 @@
         "close": "بستن",
         "refresh": "تازه‌سازی",
         "loading": "در حال بارگیری...",
+        "loading_apps": "در حال بارگیری برنامه‌ها...",
         "error": "خطا",
         "success": "موفق",
         "warning": "هشدار",
@@ -409,7 +412,21 @@
         "image_not_found": "فایل والپیپر یافت نشد",
         "failed_load": "خطا در بارگیری تصویر",
         "default_background": "پس‌زمینه گرادیان پیش‌فرض",
-        "info": "• تصاویر بهینه‌سازی و به صورت محلی ذخیره می‌شوند\n• از فرمت‌های JPG، PNG پشتیبانی می‌کند\n• والپیپر فقط برای صفحه اصلی اعمال می‌شود"
+        "info": "• تصاویر بهینه‌سازی و به صورت محلی ذخیره می‌شوند\n• از فرمت‌های JPG، PNG پشتیبانی می‌کند\n• والپیپر فقط برای صفحه اصلی اعمال می‌شود",
+        "visit_store": "بازدید از فروشگاه والپیپر",
+        "store_button": "فروشگاه والپیپر"
+    },
+    "wallpaper_store": {
+        "title": "فروشگاه والپیپر",
+        "loading": "در حال بارگیری والپیپرها...",
+        "error_loading": "خطا در بارگیری والپیپرها: {error}",
+        "retry": "تلاش مجدد",
+        "no_wallpapers": "هیچ والپیپری موجود نیست",
+        "set_as_wallpaper": "تنظیم به عنوان والپیپر",
+        "download": "دانلود",
+        "download_success": "والپیپر با موفقیت دانلود شد!",
+        "download_error": "خطا در دانلود والپیپر: {error}",
+        "set_success": "والپیپر با موفقیت تنظیم شد! برای مشاهده به صفحه اصلی بروید."
     },
     "store_screen": {
         "title": "فروشگاه اشتراک",
