--- a/assets/languages/tr.json
+++ b/assets/languages/tr.json
@@ -33,6 +33,8 @@
         "per_app_tunnel_desc": "VPN tünelini kullanması gereken uygulamaları seçin (diğerleri engellenir)",
         "home_wallpaper": "Ana Ekran Duvar Kağıdı",
         "home_wallpaper_desc": "Ana ekran arka planı için özel duvar kağıdı ayarlayın",
+        "wallpaper_store": "Duvar Kağıdı Mağazası",
+        "wallpaper_store_desc": "Koleksiyonumuzdan duvar kağıtlarına göz atın ve indirin",
         "vpn_settings": "VPN Ayarları",
         "vpn_settings_desc": "Alt ağları atlayın ve diğer VPN seçeneklerini yapılandırın",
         "battery_background": "Pil ve Arka Plan Erişimi",
@@ -278,6 +280,7 @@
         "close": "Kapat",
         "refresh": "Yenile",
         "loading": "Yükleniyor...",
+        "loading_apps": "Uygulamalar yükleniyor...",
         "error": "Hata",
         "success": "Başarılı",
         "warning": "Uyarı",
@@ -409,7 +412,21 @@
         "image_not_found": "Duvar kağıdı dosyası bulunamadı",
         "failed_load": "Resim yüklenemedi",
         "default_background": "Varsayılan Gradyan Arka Plan",
-        "info": "• Resimler optimize edilecek ve yerel olarak kaydedilecektir\n• JPG, PNG formatlarını destekler\n• Duvar kağıdı sadece ana ekrana uygulanır"
+        "info": "• Resimler optimize edilecek ve yerel olarak kaydedilecektir\n• JPG, PNG formatlarını destekler\n• Duvar kağıdı sadece ana ekrana uygulanır",
+    "visit_store": "Duvar Kağıdı Mağazasını Ziyaret Et",
+    "store_button": "Duvar Kağıdı Mağazası"
+    },
+    "wallpaper_store": {
+        "title": "Duvar Kağıdı Mağazası",
+        "loading": "Duvar kağıtları yükleniyor...",
+        "error_loading": "Duvar kağıtları yüklenirken hata oluştu: {error}",
+        "retry": "Tekrar Dene",
+        "no_wallpapers": "Mevcut duvar kağıdı yok",
+        "set_as_wallpaper": "Duvar Kağıdı Olarak Ayarla",
+        "download": "İndir",
+        "download_success": "Duvar kağıdı başarıyla indirildi!",
+        "download_error": "Duvar kağıdı indirilirken hata oluştu: {error}",
+        "set_success": "Duvar kağıdı başarıyla ayarlandı! Görmek için ana ekrana gidin."
     },
     "vpn_settings": {
         "title": "VPN Ayarları",
