Renamed and changed icon

--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -56,7 +56,7 @@
     "select_language": "اختر اللغة"
   },
   "home": {
-    "title": "Proxy Cloud",
+    "title": "QShield",
     "connect": "اتصال",
     "disconnect": "قطع الاتصال",
     "connecting": "جاري الاتصال...",
