--- a/assets/languages/es.json
+++ b/assets/languages/es.json
@@ -56,7 +56,7 @@
     "select_language": "Seleccionar Idioma"
   },
   "home": {
-    "title": "Proxy Cloud",
+    "title": "QShield",
     "connect": "Conectar",
     "disconnect": "Desconectar",
     "connecting": "Conectando...",
