--- a/assets/languages/fr.json
+++ b/assets/languages/fr.json
@@ -56,7 +56,7 @@
     "select_language": "Sélectionner la Langue"
   },
   "home": {
-    "title": "Proxy Cloud",
+    "title": "QShield",
     "connect": "Connecter",
     "disconnect": "Déconnecter",
     "connecting": "Connexion en cours...",
