--- a/assets/languages/zh.json
+++ b/assets/languages/zh.json
@@ -56,7 +56,7 @@
     "select_language": "选择语言"
   },
   "home": {
-    "title": "Proxy Cloud",
+    "title": "QShield",
     "connect": "连接",
     "disconnect": "断开连接",
     "connecting": "连接中...",
